--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
     "google-maps-react": "^2.0.2",
+    "leaflet": "^1.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.6.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
